[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
description = "Simple Hello World to learn basic packaging and project build."
readme = "README.md"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
